name:                github-post-receive
version:             0.1.0.0
synopsis:            Github post-receive server library
description:         This is a library for github post-receive server.
homepage:            https://github.com/amutake/github-post-receive
license:             BSD3
license-file:        LICENSE
author:              Shohei Yasutake
maintainer:          Shohei Yasutake <amutake.s@gmail.com>
copyright:           Copyright (C) 2013 Shohei Yasutake
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          git://github.com/amutake/github-post-receive.git

library
  exposed-modules:   Github.PostReceive.Types
                   , Github.PostReceive.Server
  hs-source-dirs:    src
  build-depends:     base ==4.*
                   , aeson >=0.6.1
                   , bytestring >=0.10
                   , http-types >=0.6
                   , process >=1.0
                   , transformers >=0.2
                   , unix-time
                   , email-validate >=1.0
                   , text
                   , conduit
                   , attoparsec-conduit
                   , warp >=2.0.0
                   , wai >=2.0.0
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-unused-do-bind
  default-language:  Haskell2010
