name:                github-post-receive
version:             0.1.0.0
synopsis:            github web hooks server
description:         This is a server of github web hooks.
homepage:            http://github.com/amkkun/github-post-receive
license:             BSD3
license-file:        LICENSE
author:              Shohei Yasutake
maintainer:          Shohei Yasutake <amkkun@gmail.com>
copyright:           Copyright (C) 2013 Shohei Yasutake
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/amkkun/github-post-receive.git

executable github-post-receive
  hs-source-dirs:    src
  main-is:           main.hs
  build-depends:     base ==4.*
                   , bytestring >=0.10
                   , text >=0.11
                   , aeson >=0.6.2
                   , email-validate >=1.0
                   , conduit >=1.0
                   , http-types >=0.8
                   , wai ==2.*
                   , warp ==2.*
                   , old-locale
                   , process >= 1.0
                   , scotty >= 0.3
                   , time
                   , transformers >= 0.2
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-unused-do-bind
  default-language:  Haskell2010

